set default font size bigger

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -17,6 +17,11 @@
   --ifm-code-font-size: 95%;
 }
 
+div.markdown p,
+div.markdown li {
+  font-size: 18px;
+}
+
 .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, 0.1);
   display: block;
