--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -32,3 +32,7 @@ div.markdown li {
 html[data-theme='dark'] .docusaurus-highlight-code-line {
   background-color: rgba(0, 0, 0, 0.3);
 }
+
+.system-small-img {
+  width: 50%;
+}
